--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@opentelemetry/sdk-node": "^0.44.0",
     "@opentelemetry/sdk-trace-base": "^1.17.1",
     "@opentelemetry/semantic-conventions": "^1.17.1",
+    "@willsoto/nestjs-prometheus": "^6.0.0",
     "axios": "^1.6.0",
     "nest-winston": "^1.9.4",
     "newsapi": "^2.4.1",
