--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@opentelemetry/sdk-trace-base": "^1.17.1",
     "@opentelemetry/semantic-conventions": "^1.17.1",
     "@willsoto/nestjs-prometheus": "^6.0.0",
+    "aws-sdk": "^2.1519.0",
     "axios": "^1.6.0",
     "nest-winston": "^1.9.4",
     "newsapi": "^2.4.1",
@@ -47,6 +48,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
